# grid-wizard-openclaw-skill

./: .env.example  .gitattributes  .gitignore  LICENSE  MIT_LICENSE  README.md  SKILL.md  manifest.json  pyproject.toml  requirements.txt  wizard_ai_hybrid_v2.py  wizard_dynamic_tranche.py  wizard_license.py  wizard_metrics.py  wizard_orchestrator_v2.py  wizard_reserve_relief.py  wizard_rlusd_grid_v2.py
.rufus_venv/: pyvenv.cfg
.rufus_venv/Scripts/: activate  activate.bat
agents/: openai.yaml
examples/: agent_usage.md
grid_wizard_openclaw_skill/: __init__.py  entrypoint.py
manifest/: skill_manifest.json
references/: backend.md
scripts/: bootstrap.ps1  ci_checks.sh  smoke-test.ps1  validate_manifest.py
skill/: instructions.md  manifest.json  safety.py  schemas.py  skill_runner.py
src/grid_wizard_openclaw_skill/: __init__.py  __main__.py
tests/: test_manifest_integrity.py  test_skill_import.py
wizard_core/: wizard_metrics.py  wizard_orchestrator_v2.py  wizard_reserve_relief.py  wizard_rlusd_grid_v2.py
